2008-06-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/epydoc.mk:
	  Clean Xvfb.pid

2008-06-29  Arek Korbik  <arkadini@gmail.com>

	* flumotion/extern/log/log.py (Loggable.writeMarker): Fix
	docstring - please doc generator.

2008-06-28  Arek Korbik  <arkadini@gmail.com>

	* flumotion/manager/component.py: Make ComponentHeaven not
	reconnect components' eaters unnecesarily when it detaches
	components. Make getFeederAvatar() private again, as it
	should be. Split _connectEatersAndFeeders into two parts and reuse.

	* flumotion/test/test_manager_component.py: Remove todo markers -
	those tests should pass now.

2008-06-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Check for Xvfb
	* common/epydoc.mk:
	  Newer epydoc introspects, so we run a temporary Xvfb server
	  to handle gtk imports.
	* flumotion.spec.in:
	  BuildRequire Xvfb.

2008-06-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py
	(AdminWindow._componentDo): Change the components so they
	actually show up in the po files

2008-06-27  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/test_manager_component.py
	(TestComponentHeaven.testAttachDetachLinear): add missing reset.
	(TestComponentHeaven.testAttachDetachMultipleFeedersComplex): add
	a more complex test with multiple feeders and eaters in the same
	component.

2008-06-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py
	(AdminWindow._componentActivate): is unused, remove

2008-06-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py (AdminWindow._runWizard): Add
	missing space in error message.

2008-06-26  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* po/ca.po:
	Updated.

2008-06-26  Johan Dahlin  <johan@flumotion.com>


	* flumotion/admin/gtk/addformatwizard.py: Update the imports
	after the last change.

2008-06-25  Johan Dahlin  <johan@flumotion.com>

	* data/glade/Makefile.am: