@@ -10,10 +10,12 @@ pypath = $(top_builddir):$(top_srcdir):$(PYTHONPATH)
 
 html/index.html: $(patsubst %, $(top_srcdir)/%, $(MODULE_FILES)) $(top_srcdir)/common/gendoc.py
 	@echo Generating HTML documentation...
-	Xvfb :1001 > /dev/null 2>&1 & echo $$! > Xvfb.pid
-	@DISPLAY=:1001 PYTHONPATH=$(pypath) $(PYTHON) $(top_srcdir)/common/gendoc.py $(EPYDOC_ARGS) $(MODULES) 2>&1
-	kill `cat Xvfb.pid`
-	rm Xvfb.pid
+	@$(PYTHON) -c "import os; print os.getpid() + 10" > display
+	@Xvfb -ac :`cat display` & echo $$! > Xvfb.pid
+	@DISPLAY=:`cat display` PYTHONPATH=$(pypath) $(PYTHON) $(top_srcdir)/common/gendoc.py $(EPYDOC_ARGS) $(MODULES) 2>&1; echo $$? > ret
+	@kill `cat Xvfb.pid`
+	@rm Xvfb.pid display
+	@exit `cat ret; rm -f ret`
 # FIXME: this stopped working when running with Xvfb, but no idea why
 # we need to look at newer epydoc anyway
 #| $(PYTHON) $(top_srcdir)/common/filterdoc.py
